fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@
   box-sizing: border-box;
   background-color: var(--main-bg-color);
   font-family: var(--font-text);
+  overflow-x: hidden;
 }
 
 h1, h2 {
